# fuzzytech

./: .gitignore  README.md
fuzzytech/: CMakeLists.txt  fuzzytech.cpp  fuzzytech.sln  fuzzytech.vcxproj  fuzzytech.vcxproj.filters
fuzzytech/autotests/: CMakeLists.txt
fuzzytech/autotests/fuzzyset/: CMakeLists.txt  fuzzyset_auto.cpp
fuzzytech/src/: CMakeLists.txt
fuzzytech/src/fuzzyset/: CMakeLists.txt  fuzzyset.cpp  fuzzyset.h
fuzzytech/src/setupman/: setupmanager.h
fuzzytech/src/setupman/normlib/: tconorm.h  tnorm.h
fuzzytech/test_sample/: CMakeLists.txt  sample.cpp
